Pegar Imagens pelo Tipo e ID do Produto
